--- a/main.html
+++ b/main.html
@@ -10,7 +10,34 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<div class="card-deck">
+  <div class="card bg-light">
+    <img class="card-img-top" src="..." alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Welcome to Sync5</h5>
+      <p class="card-text">New Features</p>
+      <p class="card-text">Mobile and Tablet support</p>
+      <p class="card-text">With this new update you will be able to sync your work across a large number of platforms.</p>
+      <a href="#" class="btn btn-primary">Read more</a>
+    </div>
+    <div class="card-footer">
+      <small class="text-muted">Last updated 12 mins ago</small>
+    </div>
+  </div>
+  <div class="card bg-light">
+    <img class="card-img-top" src="..." alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Alert</h5>
+      <p class="card-text">Node Dead</p>
+      <p class="card-text">Node 5 (east-us) is offline for the last 12 days.</p>
+      <h5 class="card-title">President under Pressure</h5>
+      <p class="card-text">The US president is under pressure to respond to a widespread cyber-attack linked to China.</p>
+    </div>
+    <div class="card-footer">
+      <small class="text-muted">Last updated 12 mins ago</small>
+    </div>
+  </div>
+</div>
 </body>
 
 </html>
