--- a/main.html
+++ b/main.html
@@ -11,10 +11,10 @@
     <script type="text/javascript" src="./script.js">
 </script>
 <div class="card-deck">
-  <div class="card bg-light">
+  <div  class="card bg-light bg-danger">
     <img class="card-img-top" src="..." alt="Card image cap">
     <div class="card-body">
-      <h5 class="card-title">Welcome to Sync5</h5>
+      <h5 class="card-title card-header">Welcome to Sync5</h5>
       <p class="card-text">New Features</p>
       <p class="card-text">Mobile and Tablet support</p>
       <p class="card-text">With this new update you will be able to sync your work across a large number of platforms.</p>
