--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 </script>
 <div class="card-deck">
   <div  class="card bg-light bg-danger">
-    <img class="card-img-top" src="..." alt="Card image cap">
+    <img class="card-img-top" src="https://images.unsplash.com/photo-1590523278191-995cbcda646b?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjEyMDd9" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title card-header">Welcome to Sync5</h5>
       <p class="card-text">New Features</p>
